--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,23 @@
 /* index  */
 /*        */
 
+.error-message {
+  background: #ec3030;
+  width: 100%;
+  height: 30px;
+  margin: 0 0 20px;
+
+  .error-text-wrapper {
+    margin: 0 auto 0;
+    width: 80%;
+
+    p {
+      text-align: center;
+      font-weight: bold;
+    }
+  }
+}
+
 .index-container {
   margin: 0 auto 200px;
   width: 80%;
